--- a/package.json
+++ b/package.json
@@ -1,33 +1,73 @@
 {
-  "name": "pomodoro-iot",
+  "name": "home-composer",
   "version": "0.2.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Compose an Environment. Have a room react to any kind of moods and rhythms. Great for Pomodoro rooms.",
+  "build": {
+    "osx": {
+      "title": "Home Composer",
+      "app-bundle-id": "com.rhythm-room",
+      "app-category-type": "public.app-category.productivity",
+      "icon": "./build/icon.icns",
+      "icon-size": 128,
+      "contents": [
+        {
+          "x": 355,
+          "y": 125,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 155,
+          "y": 125,
+          "type": "file"
+        }
+      ]
+    },
+    "win": {
+      "title": "Home Composer",
+      "icon": "assets/win/logo.ico"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-node index.js"
+    "postinstall": "cd app && npm install",
+    "dev": "node ./node_modules/concurrently/src/main.js --kill-others \"npm run dev-electron\" \"npm run watch-app\"",
+    "dev-electron": "NODE_ENV=development ./node_modules/.bin/electron ./app --enable-logging",
+    "watch-app": "cd ./app && npm run watch",
+    "clean": "rm -rf ./dist",
+    "clean:osx": "rm -rf ./dist/osx ./dist/osx",
+    "clean:win": "rm -rf ./dist/win ./dist/win",
+    "pack": "npm run clean && npm run pack:osx && npm run pack:win",
+    "pack:osx": "npm run clean:osx && ./node_modules/.bin/electron-packager ./app \"ilm\" --out=dist/osx --platform=darwin --arch=x64 --version=1.2.2 --icon=./build/icon.icns --ignore=dist  --ignore=node_modules/electron-builder --ignore=./bower.json --ignore=README.md --ignore=.gitignore",
+    "pack:win": "npm run clean:win && ./node_modules/.bin/electron-packager ./app \"ilm\" --out=dist/win --platform=win32 --arch=ia32 --version=1.2.2 --icon=./build/icon.ico --ignore=dist --ignore=node_modules/electron-builder --ignore=./bower.json --ignore=README.md --ignore=.gitignore",
+    "build": "npm run build:osx && npm run build:win",
+    "build:osx": "CSC_IDENTITY_AUTO_DISCOVERY=false ./node_modules/.bin/build \"dist/osx/ilm-darwin-x64/ilm.app\" --osx",
+    "build:win": "npm run pack:win && ./node_modules/.bin/build \"dist/win/ilm-win32-ia32\" --win",
+    "dist:osx": "npm run pack:osx && npm run build:osx",
+    "docs": "./node_modules/.bin/groc"
   },
   "author": "Sartaj <sartaj@sartaj.me> (sartaj.me)",
   "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "exeq": "^2.4.0",
-    "express": "^4.13.4",
-    "kefir": "^3.1.0",
-    "lodash": "^3.10.1",
-    "open": "0.0.5",
-    "rxjs-es": "^5.0.0-beta.10",
-    "samsung-remote": "^1.2.4"
-  },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.11.6",
+    "electron-builder": "^5.22.2",
+    "electron-packager": "^7.5.1",
+    "electron-prebuilt": "^1.3.2",
+    "electron-prebuilt-compile": "^1.3.1",
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "tape": "^4.6.0"
+  },
+  "dependencies": {
+    "babel-register": "^6.11.6",
+    "menubar": "^5.1.0",
+    "tocktimer": "^1.0.10"
   }
 }
