--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
   "author": "Sartaj <sartaj@sartaj.me> (sartaj.me)",
   "license": "MIT",
   "dependencies": {
+    "electron": "^1.3.4",
+    "electron-rebuild": "^1.2.1",
     "@cycle/core": "^6.0.0",
     "@cycle/dom": "^8.0.0",
     "@cycle/isolate": "^1.2.0",
